--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
 <body>
   <header>
-    <div class="navbar">
+    <div class="navbar top">
+
       <span class="logo"><i class="fa-solid fa-utensils "></i> MEAL FINDER</span>
       <button class="menu-toggle" onclick="toggleMenu()" aria-label="Open menu">
         <i class="fa-solid fa-bars"></i>
