--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </button>
     </div>
     <h1>What are your favorite cuisines?</h1>
-    <p>Personalize your experience</p>
+    <p>Personalize your experience here</p>
     <div class="menu" id="menu"></div>
   </div>
 
